# ansible-collection-gcore

./: .gitignore  .pre-commit-config.yaml  README.md  galaxy.yml  pyproject.toml
.github/workflows/: ansible-test-unit.yml  black.yml  sanity.yml
meta/: runtime.yml
plugins/doc_fragments/: cloud.py  gcore.py
plugins/inventory/: cloud.py
plugins/module_utils/: api.py  cloud.py  exceptions.py  gcore.py
plugins/module_utils/clients/: base.py  image.py  instance.py  keypair.py  lifecycle_policy.py  loadbalancer.py  loadbalancer_listener.py  loadbalancer_member.py  loadbalancer_pool.py  network.py  reserved_fip.py  router.py  secret.py  securitygroup.py  securitygroup_rule.py  servergroup.py  snapshot.py  subnet.py  volume.py
plugins/modules/: gcore_image_info.py  gcore_volume.py  gcore_volume_info.py  image.py  image_info.py  instance.py  instance_info.py  instance_quota_info.py  keypair.py  keypair_info.py  lifecycle_policy.py  lifecycle_policy_info.py  loadbalancer.py  loadbalancer_info.py  loadbalancer_listener.py  loadbalancer_listener_info.py  loadbalancer_member.py  loadbalancer_pool.py  loadbalancer_pool_info.py  network.py  network_info.py  reserved_fixed_ip.py  reserved_fixed_ip_info.py  router.py  router_info.py  secret.py  secret_info.py  securitygroup.py  securitygroup_info.py  securitygroup_rule.py  servergroup.py  servergroup_info.py  snapshot.py  snapshot_info.py  subnet.py  subnet_info.py  volume.py  volume_info.py  volume_snapshot.py  volume_snapshot_info.py
tests/integration/: config.yml  integration_config.yml  integration_config.yml.template  local_playbook.yml
(+85 files in other folders)
